add amlt script

--- a/config/sing_a100_config/default_config_16.yaml
+++ b/config/sing_a100_config/default_config_16.yaml
@@ -3,7 +3,7 @@ debug: false
 distributed_type: MULTI_GPU
 downcast_bf16: 'no'
 dynamo_config:
-  dynamo_backend: INDUCTOR
+  dynamo_backend: "no"
 enable_cpu_affinity: false
 gpu_ids: all
 machine_rank: 0
